--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   # intl:
   provider: ^6.1.2
-  # shared_preferences: ^2.2.3
+  shared_preferences: ^2.2.3
 
 
 dev_dependencies:
