--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.1
   http: ^1.2.1
+  cloud_firestore: ^4.17.3
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
+  firebase_database: ^10.5.5
 
 dev_dependencies:
   flutter_test:
